--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   padding: 0rem;
-  text-align: center;
+  /* text-align: center; */
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .logo {
